--- a/qtquickcontrols2.conf
+++ b/qtquickcontrols2.conf
@@ -10,6 +10,6 @@ Theme=Light
 ;Accent=Steel
 
 [Material]
-Theme=Light
-;Accent=BlueGrey
-;Primary=BlueGray
+Theme=Dark
+Accent=BlueGrey
+Primary=BlueGray
